added featured image and images folder

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
 
 </head>
 <body>
-	<h1>Happy Mother's Day to the world's #1 MA</h1>
-	<img src="">
+	<div class="banner">
+	  <h1>Happy Mother's Day to the world's #1 MA</h1>
+	  <img src="images/wrestling-practice.jpg">
+	</div>
+	<div class="container">
+	  <h3>We don't need to explain the reasons why, but here are some anyway!</h3>
+	  <img src="">
+	</div>
+	
 
 </body>
 </html>
