--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Gamja+Flower|Gloria+Hallelujah|Indie+Flower|Josefin+Sans|Pangolin" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Happy Mother's Day!</title>
 
@@ -8,11 +9,28 @@
 <body>
 	<div class="banner">
 	  <h1>Happy Mother's Day to the world's #1 MA</h1>
-	  <img src="images/wrestling-practice.jpg">
+	  <img src="images/polaroid.jpg">
+	  <img src="images/selfie-cole-ma.jpg">
+	  <img src="images/ferry.jpg">
 	</div>
 	<div class="container">
-	  <h3>We don't need to explain the reasons why, but here are some anyway!</h3>
-	  <img src="">
+	  <h2>We don't need to explain the reasons why, but here are some anyway!</h2>
+	  <div class="card">
+	  	<h3>Reason #1: You are always there for us. Even when it isn't convenient for you, you make time because you truly care.</h3>
+	  	<img src="images/wrestling-practice.jpg" id= "half">
+	  	<img src="images/rental-car-office.jpg" id= "half2">
+	  	<img src="images/v-beach.jpg">
+	  	<img src="images/nosy.jpg">
+	  	<img src="images/belay-on.jpg">
+	  </div>
+	  <div class="card">
+	  	<h3>Reason #2: You never fail to remind us that life is better when you laugh in its face.</h3>
+	  	<img src="images/rental-car-office.jpg">
+	  </div>
+	  <div class="card">
+	  	<h3>Reason #3: You are bold. You inspire us to live life courageously and to go after what we know we deserve.</h3>
+	  	<img src="images/rental-car-office.jpg">
+	  </div>	  
 	</div>
 	
 
