added more pictures and a video

--- a/index.html
+++ b/index.html
@@ -17,19 +17,26 @@
 	  <h2>We don't need to explain the reasons why, but here are some anyway!</h2>
 	  <div class="card">
 	  	<h3>Reason #1: You are always there for us. Even when it isn't convenient for you, you make time because you truly care.</h3>
-	  	<img src="images/wrestling-practice.jpg" id= "half">
-	  	<img src="images/rental-car-office.jpg" id= "half2">
-	  	<img src="images/v-beach.jpg">
-	  	<img src="images/nosy.jpg">
-	  	<img src="images/belay-on.jpg">
+	  	<img src="images/wrestling-practice.jpg" class=  "half">
+	  	<img src="images/rental-car-office.jpg" class= "half">
+	  	<img src="images/v-beach.jpg" class= "third">
+	  	<img src="images/nosy.jpg" class= "third">
+	  	<img src="images/belay-on.jpg" class= "third">
 	  </div>
 	  <div class="card">
 	  	<h3>Reason #2: You never fail to remind us that life is better when you laugh in its face.</h3>
-	  	<img src="images/rental-car-office.jpg">
+	  	<img src="images/teeth.jpg" class="half">
+	  	<img src="images/selfie-driving.jpg" class="half">
 	  </div>
 	  <div class="card">
 	  	<h3>Reason #3: You are bold. You inspire us to live life courageously and to go after what we know we deserve.</h3>
-	  	<img src="images/rental-car-office.jpg">
+	  	<img src="images/misty.jpg" class= "third">
+	  	<img src="images/side-profile.jpg" class= "third">
+	  	<img src="images/black-beach.jpg" class= "third">
+	  	<video width="98%" height="auto" controls>
+          <source src="images/log-bridge.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
 	  </div>	  
 	</div>
 	
