finished reasons, finished testimonials, finished MVP

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous"> -->
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Gamja+Flower|Gloria+Hallelujah|Indie+Flower|Josefin+Sans|Pangolin" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Happy Mother's Day!</title>
 
 </head>
@@ -20,13 +23,16 @@
 	  	<img src="images/wrestling-practice.jpg" class=  "half">
 	  	<img src="images/rental-car-office.jpg" class= "half">
 	  	<img src="images/v-beach.jpg" class= "third">
-	  	<img src="images/nosy.jpg" class= "third">
 	  	<img src="images/belay-on.jpg" class= "third">
+	  	<img src="images/cole-ma.jpg" class= "third">
 	  </div>
 	  <div class="card">
 	  	<h3>Reason #2: You never fail to remind us that life is better when you laugh in its face.</h3>
 	  	<img src="images/teeth.jpg" class="half">
 	  	<img src="images/selfie-driving.jpg" class="half">
+	  	<img src="images/lil-layne-ma.jpg" class="third">
+	  	<img src="images/goofy2.jpg" class="third">
+	  	<img src="images/selfie-marquette.jpg" class="third">
 	  </div>
 	  <div class="card">
 	  	<h3>Reason #3: You are bold. You inspire us to live life courageously and to go after what we know we deserve.</h3>
@@ -40,6 +46,30 @@
 	  </div>	  
 	</div>
 	
+	  <h2>Testimonials</h2>
+	  <h3 id="ma">Ma is the best ma in the world because...</h3>
+	<div class="testimonials"> 
+	  <div class="quote drew">
+	  	<p>"She is the definition of love. The most loving, caring, compassionate woman I know. Mom, thank you for always being there for me at my highs and at my lows, one one of the few constants on my journey through life."</p>
+	  	<p>-Drew</p>
+	  </div>
+	  <div class="quote reed">
+	  	<p>"She isn't afraid to find what's right for her, and help others find what is right for them. She is the epitome of support and love. Thank you for being my ma."</p>
+	  	<p>-Reed</p>
+	  </div>
+	  <div class="quote cole">
+	  	<p>"She hooked me up with her hairdresser. #1 wingman. She's the most caring person ever."</p>
+	  	<p>-Cole</p>
+	  </div>
+	  <div class="quote layne">
+	  	<p>"She taught me how to be a loving person. Ma is the best ma in the world because she knows how to lift my spirits whenever they need lifting. Ma is the best ma in the world because she is always there when I need someone to talk to. Ma is the best ma in the world because she doesn't take no shit and knows to put her foot down when someone needs an ass beating."</p>
+	  	<p>-Layne</p>
+	  </div>
 
+	</div>
+	<div class="footer">
+	  <h2>Happy Mother's Day, Ma! We love you. Here's some flowers!</h2>
+	  <img src="images/flowers.jpg">
+	</div>
 </body>
 </html>
