fixed case on file types

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	  <h1>Happy Mother's Day to the world's #1 MA</h1>
 	  <img src="images/polaroid.jpg">
 	  <img src="images/selfie-cole-ma.jpg">
-	  <img src="images/ferry.jpg">
+	  <img src="images/ferry.JPG">
 	</div>
 	<div class="container">
 	  <h2>We don't need to explain the reasons why, but here are some anyway!</h2>
 	  <div class="card">
 	  	<h3>Reason #1: You are always there for us. Even when it isn't convenient for you, you make time because you truly care.</h3>
 	  	<img src="images/wrestling-practice.jpg" class=  "half">
-	  	<img src="images/rental-car-office.jpg" class= "half">
-	  	<img src="images/v-beach.jpg" class= "third">
+	  	<img src="images/rental-car-office.JPG" class= "half">
+	  	<img src="images/v-beach.JPG" class= "third">
 	  	<img src="images/belay-on.jpg" class= "third">
 	  	<img src="images/cole-ma.jpg" class= "third">
 	  </div>
@@ -32,15 +32,15 @@
 	  	<img src="images/selfie-driving.jpg" class="half">
 	  	<img src="images/lil-layne-ma.jpg" class="third">
 	  	<img src="images/goofy2.jpg" class="third">
-	  	<img src="images/selfie-marquette.jpg" class="third">
+	  	<img src="images/selfie-marquette.JPG" class="third">
 	  </div>
 	  <div class="card">
 	  	<h3>Reason #3: You are bold. You inspire us to live life courageously and to go after what we know we deserve.</h3>
-	  	<img src="images/misty.jpg" class= "third">
-	  	<img src="images/side-profile.jpg" class= "third">
-	  	<img src="images/black-beach.jpg" class= "third">
+	  	<img src="images/misty.JPG" class= "third">
+	  	<img src="images/side-profile.JPG" class= "third">
+	  	<img src="images/black-beach.JPG" class= "third">
 	  	<video width="98%" height="auto" controls>
-          <source src="images/log-bridge.mp4" type="video/mp4">
+          <source src="images/log-bridge.MP4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
 	  </div>	  
@@ -69,7 +69,7 @@
 	</div>
 	<div class="footer">
 	  <h2>Happy Mother's Day, Ma! We love you. Here's some flowers!</h2>
-	  <img src="images/flowers.jpg">
+	  <img src="images/flowers.JPG">
 	</div>
 </body>
 </html>
