fix images in banner

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<div class="banner">
 	  <h1>Happy Mother's Day to the world's #1 MA</h1>
 	  <img src="images/polaroid.jpg">
-	  <img src="images/selfie-cole-ma.jpg">
-	  <img src="images/ferry.JPG">
+	  <img src="images/selfie-cole-ma.JPG">
+	  <img src="images/ferry.jpg">
 	</div>
 	<div class="container">
 	  <h2>We don't need to explain the reasons why, but here are some anyway!</h2>
